--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="javascripts/shared.js"></script>
 <link rel="stylesheet" href="stylesheets/style.css">
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!-- <link rel="shortcut icon" href="images/favicon.ico"> --> 
+<link rel="shortcut icon" href="images/favicon.ico">
 <script>
   //add google analytics later//
 </script>
