finished register page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,13 +11,13 @@
       <h6 id="login-err" class="center-align red-text hide">Invalid Username/Password <i class="fa fa-exclamation-circle" aria-hidden="true"></i></h6>
       <form >
         <div class="row">
-          <div class="input-field col s10 m6 offset-m3">
+          <div class="input-field col s10 m6 offset-m3 offset-s1">
             <input id="username" type="text" class="validate customInput" required>
             <label for="username">Username</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s10 m6 offset-m3">
+          <div class="input-field col s10 m6 offset-m3 offset-s1">
             <input id="pass" type="password" class="validate customInput" required>
             <label for="pass">Password</label>
           </div>
