--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,14 +9,14 @@
     <h3 class="center-align">Register for <a href="/" class="blue-text text-darken-4">Bored With Friends</a></h3>
     <div class="row">
       <p id="badUsername" class="center-align red-text hide">Invalid Username <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
-      <div class="input-field col s10 m6 offset-m3">
+      <div class="input-field col s10 m6 offset-m3 offset-s1">
         <input id="username" type="text" class="validate customInput" maxlength="63">
         <label for="username">Username</label>
       </div>
     </div>
     <div class="row">
       <p id="badEmail" class="center-align red-text hide">Invalid Email Address <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
-      <div class="input-field col s10 m6 offset-m3">
+      <div class="input-field col s10 m6 offset-m3 offset-s1">
         <input id="eml" type="text" class="validate customInput" maxlength="255">
         <label for="eml">Email</label>
       </div>
@@ -27,14 +27,14 @@
         <p>Passwords must be a mix of numbers and letters, at least 8 characters long.</p>
         <p>Special characters !@#$%^&*/._+- are also allowed</p>
       </div>
-      <div class="input-field col s10 m6 offset-m3">
+      <div class="input-field col s10 m6 offset-m3 offset-s1">
         <input id="pass1" type="password" class="validate customInput" maxlength="31">
         <label for="pass1">Password</label>
       </div>
     </div>
     <div class="row">
       <p id="badPassMatch" class="center-align red-text hide">Passwords do not match <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
-      <div class="input-field col s10 m6 offset-m3">
+      <div class="input-field col s10 m6 offset-m3 offset-s1">
         <input id="pass2" type="password" class="validate customInput">
         <label for="pass2">Retype Password</label>
       </div>
