--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
   <body onload="setup();">
     <%- include('navbar'); %>
     <div class="container">
-
+      <h1>HELLO WORLD (:</h1>
     </div>
   </body>
 </html>
