fixed some screen size issues

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,8 +23,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s3 m2 offset-s6 offset-m7">
-            <a id="login-button" onclick="login();" class="waves-effect waves-light btn blue darken-4">Log In</a>
+          <div class="col s3 m2 offset-s8 offset-m7">
+            <a id="login-button" onclick="login();" class="waves-effect waves-light btn blue darken-4 hide-on-small-only">Log In</a>
+            <a id="login-button-mobile" onclick="login();" class="waves-effect waves-light btn blue darken-4 hide-on-med-and-up"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
             <div id="loginLoadingCircle" class="hide preloader-wrapper big active">
               <div class="spinner-layer spinner-blue-only">
                 <div class="circle-clipper left">
