--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
   <body onload="setup();">
     <%- include('navbar'); %>
     <div class="container">
-      <h1>HELLO WORLD (:</h1>
+      <h1 class="center-align"><i class="fa fa-smile-o" aria-hidden="true"></i> HELLO WORLD <i class="fa fa-smile-o" aria-hidden="true"></i></h1>
     </div>
   </body>
 </html>
