--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="javascripts/register.js"></script>
   </head>
   <body class="container">
-    <h3 class="center-align">Register for <a href="/" class="blue-text text-darken-4">Bored With Friends</a></h3>
+    <h3 class="center-align">Register for <a href="/" class="blue-text text-darken-4 hide-on-small-only">Bored With Friends</a><a href="/" class="blue-text text-darken-4 hide-on-med-and-up">BWF</a></h3>
     <div class="row">
       <p id="badUsername" class="center-align red-text hide">Invalid Username <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
       <div class="input-field col s10 m6 offset-m3 offset-s1">
