google places tied in and working

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,9 @@
   <body onload="setup();">
     <%- include('navbar'); %>
     <div class="container">
-      <h1 class="center-align"><i class="fa fa-smile-o" aria-hidden="true"></i> HELLO WORLD <i class="fa fa-smile-o" aria-hidden="true"></i></h1>
+      <div class="row pushed-down-alot">
+        <a id="foodBtn" onclick="loadFood();" class="hide waves-effect waves-light btn blue darken-4">Food <i class="fa fa-cutlery" aria-hidden="true"></i></a>
+      </div>
     </div>
   </body>
 </html>
