--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,7 +3,7 @@
     <a id="nav-logo" href="/" class="brand-logo">BWF</a>
     <!-- <ul class="right hide-on-med-and-down"> -->
     <ul class="right">
-      <li><a onclick="logout();">Log Out <i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
+      <li><a onclick="logout();"><span class="hide-on-small-only">Log Out</span> <i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
     </ul>
   </div>
 </nav>
