--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,8 +17,27 @@
               <div class="indeterminate"></div>
           </div>
           <h1 id="geoError" class="red-text center-align hide">Sorry, Location is not enabled <i class="fa fa-frown-o" aria-hidden="true"></i></h1>
-
-          <a id="foodBtn" onclick="loadFood();" class="hide explore-options waves-effect waves-light btn blue darken-4">Food <i class="fa fa-cutlery" aria-hidden="true"></i></a>
+          <div id="explore-vs-home" class="row hide">
+            <h2 class="center-align blue-grey-text text-darken-4 hide-on-small-only">Where do you wanna hang out?</h2>
+            <div class="col s6 m6">
+              <div class="card blue lighten-4 clickable" onclick="displayHomeOptions();">
+                <div class="card-content blue-grey-text text-darken-4 center-align">
+                  <span class="card-title center-align">Stay Home</span>
+                  <h1 class="center-align option-card-logo"><i class="fa fa-home" aria-hidden="true"></i></h1>
+                </div>
+              </div>
+            </div>
+            <div class="col s6 m6">
+              <div class="card teal lighten-4 center-align clickable" onclick="displayHomeOptions();">
+                <div class="card-content blue-grey-text text-darken-4">
+                  <span class="card-title center-align">Go Explore</span>
+                  <h1 class="center-align option-card-logo"><i class="fa fa-compass" aria-hidden="true"></i></h1>
+                </div>
+              </div>
+            </div>
+          </div>
+          <%- include('home-options'); %>
+          <%- include('explore-options'); %>
         </div>
       </div>
     </body>
