decent display of places

--- a/views/find-food.ejs
+++ b/views/find-food.ejs
@@ -1,3 +1,5 @@
-<div id="order-food" class="hide">
-  <h3>Order Up</h3>
+<div id="find-food" class="hide">
+  <div id="food-places">
+    <!-- magic -->
+  </div>
 </div>
