--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
               </div>
             </div>
             <div class="col s6 m6">
-              <div class="card teal lighten-4 center-align clickable" onclick="displayHomeOptions();">
+              <div class="card teal lighten-4 center-align clickable" onclick="displayExploreOptions();">
                 <div class="card-content blue-grey-text text-darken-4">
                   <span class="card-title center-align">Go Explore</span>
                   <h1 class="center-align option-card-logo"><i class="fa fa-compass" aria-hidden="true"></i></h1>
