added the powered by google thing

--- a/views/find-food.ejs
+++ b/views/find-food.ejs
@@ -1,5 +1,8 @@
 <div id="find-food" class="hide">
-  <div id="food-places">
+  <div class="row" id="food-places">
     <!-- magic -->
+  </div>
+  <div class="col s12 m12">
+    <img class="google-attribution hide" src="images/powered_by_google.png">
   </div>
 </div>
