fixed some mobile issues and settings

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
           </div>
           <h1 id="geoError" class="red-text center-align hide">Sorry, Location is not enabled <i class="fa fa-frown-o" aria-hidden="true"></i></h1>
           <div id="explore-vs-home" class="row hide">
-            <h2 class="center-align blue-grey-text text-darken-4 hide-on-small-only">Where do you wanna hang out?</h2>
+            <h2 class="center-align blue-grey-text text-darken-4 hide-on-small-only">What are you in the mood for?</h2>
             <div class="col s6 m6">
               <div class="card blue lighten-4 clickable" onclick="displayHomeOptions();">
                 <div class="card-content blue-grey-text text-darken-4 center-align">
