--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,10 @@ footer.page-footer {
   span.card-title.center-align {
     font-size: 1.5rem;
   }
+  a {
+    pointer-events:none;
+    cursor: pointer;
+  }
 }
 
 .food-card {
