--- a/views/find-food.ejs
+++ b/views/find-food.ejs
@@ -1,5 +1,10 @@
 <div id="find-food" class="hide">
-  <div class="row" id="food-places">
+  <div class="row">
+    <div class="col s12 m12">
+      <button class="btn waves-effect waves-light" onclick="backToExploreOptions();"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></button>
+    </div>
+  </div>
+  <div class="row pushed-down-alittle" id="food-places">
     <!-- magic -->
   </div>
   <div class="col s12 m12">
