--- a/views/home-options.ejs
+++ b/views/home-options.ejs
@@ -1,5 +1,8 @@
 <div id="home-options" class="hide">
-  <div class="col s6 m4">
+  <div class="col s12 m12">
+    <button class="btn waves-effect waves-light" onclick="backToHome();"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></button>
+  </div>
+  <div class="col s6 m4 pushed-down-alittle">
     <div class="card blue lighten-4 clickable" onclick="orderFood();">
       <div class="card-content blue-grey-text text-darken-4 center-align">
         <span class="card-title center-align">Order Food</span>
@@ -7,7 +10,7 @@
       </div>
     </div>
   </div>
-  <div class="col s6 m4">
+  <div class="col s6 m4 pushed-down-alittle">
     <div class="card blue lighten-4">
       <div class="card-content blue-grey-text text-darken-4 center-align">
         <span class="card-title center-align">Coming Soon</span>
@@ -15,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="col s6 m4">
+  <div class="col s6 m4 pushed-down-alittle">
     <div class="card blue lighten-4">
       <div class="card-content blue-grey-text text-darken-4 center-align">
         <span class="card-title center-align">Coming Soon</span>
