--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,6 +40,7 @@
           <%- include('explore-options'); %>
         </div>
       </div>
+      <%- include('terms-privacy-modal'); %>
     </body>
   </main>
   <%- include('footer'); %>
