--- a/views/register.ejs
+++ b/views/register.ejs
@@ -41,7 +41,7 @@
     </div>
     <div class="row">
       <div class="col s3 m2 offset-s6 offset-m7">
-        <a id="registerBtn" onclick="register();" class="waves-effect waves-light btn blue darken-4">Register</a>
+        <a id="registerBtn" onclick="loadModal();" class="waves-effect waves-light btn blue darken-4">Register</a>
         <div id="registerLoadingCircle" class="hide preloader-wrapper big active">
           <div class="spinner-layer spinner-blue-only">
             <div class="circle-clipper left">
@@ -53,6 +53,21 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div id="terms-modal" class="modal modal-fixed-footer">
+      <div class="modal-content">
+        <h5 class="center-align">Terms of Use and Privacy Policy</h5>
+        <p>By using Bored With Friends you agree to NOT use the application in any manner that would harm other people or involve any unsafe or illegal activity.</p>
+        <p>As the Owner/Developer, I agree not to do anything creepy/illegal with your personal info. Email & passwords are safely stored and never disclosed to 3rd parties.</p>
+        <p>At this time, you will NEVER be contacted regarding this application. NEVER disclose personal info to communication (emails) that might appear to be related to this application.</p>
+        <p>I will do my best to provide a secure user experience. However, I am not liable for any harm associated with any usage of this application. Please use common sense.</p>
+        <p>This application uses 3rd party services to enhance user experience. Their policies:</p>
+        <p>Google Maps API: Users are bound by <a href="https://www.google.com/intl/en/policies/terms/" target="_blank">Google’s Terms of Service</a> and the <a href="https://www.google.com/policies/privacy/" target="_blank">Google Privacy Policy</a></p>
+      </div>
+      <div class="modal-footer">
+        <a onclick="acceptTerms();" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+        <a onclick="rejectTerms();" class="modal-action modal-close waves-effect waves-green btn-flat ">Disagree</a>
       </div>
     </div>
   </body>
