adding shopping option

--- a/views/explore-options.ejs
+++ b/views/explore-options.ejs
@@ -13,8 +13,8 @@
   <div class="col s6 m4 pushed-down-alittle">
     <div class="card teal lighten-4 center-align">
       <div class="card-content blue-grey-text text-darken-4">
-        <span class="card-title center-align">Coming Soon</span>
-        <h1 class="center-align option-card-logo"><i class="fa fa-hourglass-half" aria-hidden="true"></i></h1>
+        <span class="card-title center-align">Shopping</span>
+        <h1 class="center-align option-card-logo"><i class="fa fa-shopping-bag" aria-hidden="true"></i></h1>
       </div>
     </div>
   </div>
