added skeletons for new activity options

--- a/views/home-options.ejs
+++ b/views/home-options.ejs
@@ -11,10 +11,10 @@
     </div>
   </div>
   <div class="col s6 m4 pushed-down-alittle">
-    <div class="card blue lighten-4">
+    <div class="card blue lighten-4 clickable" onclick="watchTV();">
       <div class="card-content blue-grey-text text-darken-4 center-align">
-        <span class="card-title center-align">Coming Soon</span>
-        <h1 class="center-align option-card-logo"><i class="fa fa-hourglass-half" aria-hidden="true"></i></h1>
+        <span class="card-title center-align">Watch TV</span>
+        <h1 class="center-align option-card-logo"><i class="fa fa-television" aria-hidden="true"></i></h1>
       </div>
     </div>
   </div>
@@ -28,3 +28,4 @@
   </div>
 </div>
 <%- include('order-food'); %>
+<%- include('watch-tv'); %>
