--- a/views/explore-options.ejs
+++ b/views/explore-options.ejs
@@ -19,12 +19,14 @@
     </div>
   </div>
   <div class="col s6 m4 pushed-down-alittle">
-    <div class="card teal lighten-4 center-align">
+    <div class="card teal lighten-4 center-align clickable" onclick="seeMovie();">
       <div class="card-content blue-grey-text text-darken-4">
-        <span class="card-title center-align">Coming Soon</span>
-        <h1 class="center-align option-card-logo"><i class="fa fa-hourglass-half" aria-hidden="true"></i></h1>
+        <span class="card-title center-align">See Movie</span>
+        <h1 class="center-align option-card-logo"><i class="fa fa-film" aria-hidden="true"></i></h1>
       </div>
     </div>
   </div>
 </div>
 <%- include('find-food'); %>
+<%- include('go-shopping'); %>
+<%- include('see-movie'); %>
