--- a/views/see-movie.ejs
+++ b/views/see-movie.ejs
@@ -5,6 +5,7 @@
     </div>
   </div>
   <div class="row pushed-down-alittle" id="movie-options">
+    <h1>Coming Very Soon! <i class="fa fa-hourglass-end" aria-hidden="true"></i></h1>
     <!-- magic -->
   </div>
   <div class="col s12 m12">
