fixed the unsafe script issues

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="description" content="Fun little responsive app to help indecisive friend groups.">
+<meta name="keywords" content="bored, with, friends, Demetri, Shargani, DeveloperDemetri, indecisive ">
+<meta name="author" content="DeveloperDemetri">
 <link href="stylesheets/icons.css" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection"/>
 <link rel="stylesheet" href="stylesheets/style.css">
