--- a/views/register.ejs
+++ b/views/register.ejs
@@ -41,7 +41,7 @@
     </div>
     <div class="row">
       <div class="col s3 m2 offset-s6 offset-m7">
-        <a id="registerBtn" onclick="loadModal();" class="waves-effect waves-light btn blue darken-4">Register</a>
+        <a id="registerBtn" onclick="register();" class="waves-effect waves-light btn blue darken-4">Register</a>
         <div id="registerLoadingCircle" class="hide preloader-wrapper big active">
           <div class="spinner-layer spinner-blue-only">
             <div class="circle-clipper left">
