--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,33 +9,35 @@
     <h3 class="center-align">Register for <a href="/" class="blue-text text-darken-4 hide-on-small-only">Bored With Friends</a><a href="/" class="blue-text text-darken-4 hide-on-med-and-up">BWF</a></h3>
     <div class="row">
       <p id="badUsername" class="center-align red-text hide">Invalid Username <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
+      <p id="takenUsername" class="center-align red-text hide">Username already taken <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
       <div class="input-field col s10 m6 offset-m3 offset-s1">
-        <input id="username" type="text" class="validate customInput" maxlength="63">
+        <input id="username" type="text" class="validate customInput" maxlength="63" onkeyup="checkusername(null);">
         <label for="username">Username</label>
       </div>
     </div>
     <div class="row">
       <p id="badEmail" class="center-align red-text hide">Invalid Email Address <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
+      <p id="takenEmail" class="center-align red-text hide">Email already taken <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
       <div class="input-field col s10 m6 offset-m3 offset-s1">
-        <input id="eml" type="text" class="validate customInput" maxlength="255">
+        <input id="eml" type="text" class="validate customInput" maxlength="255" onkeyup="checkemail(null);">
         <label for="eml">Email</label>
       </div>
     </div>
     <div class="row">
-      <div id="badPass" class="center-align red-text hide">
+      <div id="weakPass" class="center-align red-text hide">
         <p>Invalid Password <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
         <p>Passwords must be a mix of numbers and letters, at least 8 characters long.</p>
         <p>Special characters !@#$%^&*/._+- are also allowed</p>
       </div>
       <div class="input-field col s10 m6 offset-m3 offset-s1">
-        <input id="pass1" type="password" class="validate customInput" maxlength="31">
+        <input id="pass1" type="password" class="validate customInput" maxlength="31" onkeyup="checkPassStrength();">
         <label for="pass1">Password</label>
       </div>
     </div>
     <div class="row">
       <p id="badPassMatch" class="center-align red-text hide">Passwords do not match <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
       <div class="input-field col s10 m6 offset-m3 offset-s1">
-        <input id="pass2" type="password" class="validate customInput">
+        <input id="pass2" type="password" class="validate customInput" maxlength="31" onkeyup="checkPassMatch();">
         <label for="pass2">Retype Password</label>
       </div>
     </div>
