--- a/views/find-food.ejs
+++ b/views/find-food.ejs
@@ -8,6 +8,6 @@
     <!-- magic -->
   </div>
   <div class="col s12 m12">
-    <img class="google-attribution hide" src="images/yelp/logo.png">
+    <img class="attribution hide" src="images/yelp/logo.png">
   </div>
 </div>
