--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,7 @@
     <body onload="setup();">
       <div class="container">
         <div class="row pushed-down-alot">
+          <img id="google-attribution" src="images/powered_by_google.png">
           <div id="geoLoader" class="progress">
               <div class="indeterminate"></div>
           </div>
