--- a/views/go-shopping.ejs
+++ b/views/go-shopping.ejs
@@ -7,7 +7,7 @@
   <div class="row pushed-down-alittle" id="shopping-places">
     <!-- magic -->
   </div>
-  <div class="col s12 m12">
-    <img class="google-attribution hide" src="images/yelp/logo.png">
+  <div class="col s6 m6">
+    <img class="attribution hide" src="images/yelp/logo.png">  
   </div>
 </div>
