--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,7 @@
     <%- include('header'); %>
     <title>BWF | Register</title>
     <script type="text/javascript" src="javascripts/register.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body class="container">
     <h3 class="center-align">Register for <a href="/" class="blue-text text-darken-4 hide-on-small-only">Bored With Friends</a><a href="/" class="blue-text text-darken-4 hide-on-med-and-up">BWF</a></h3>
@@ -39,6 +40,11 @@
       <div class="input-field col s10 m6 offset-m3 offset-s1">
         <input id="pass2" type="password" class="validate customInput" maxlength="31" onkeyup="checkPassMatch();">
         <label for="pass2">Retype Password</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col offset-s1 offset-m4">
+        <div class="g-recaptcha" data-sitekey="6LfVuQcUAAAAAA_A-NaI_gDOSApuYMrgOpPuhWRA"></div>
       </div>
     </div>
     <div class="row">
