--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,7 +44,8 @@
     </div>
     <div class="row">
       <div class="col offset-s1 offset-m4">
-        <div class="g-recaptcha" data-sitekey="6LfVuQcUAAAAAA_A-NaI_gDOSApuYMrgOpPuhWRA"></div>
+        <p id="bad-captcha" class="center-align red-text hide">Invalid reCAPTCHA <i class="fa fa-exclamation-circle" aria-hidden="true"></i></p>
+        <div id="captcha" class="g-recaptcha" data-sitekey="6LfVuQcUAAAAAA_A-NaI_gDOSApuYMrgOpPuhWRA"></div>
       </div>
     </div>
     <div class="row">
