updating to migrate to personal server

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -70,7 +70,7 @@
 </html>
 
 <!--
-Copyright 2016 DeveloperDemetri
+Copyright 2016-2017 DeveloperDemetri
 developerdemetri.com
 
 Licensed under the Apache License, Version 2.0 (the "License");
