--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,7 +94,7 @@ footer.page-footer {
 }
 
 /*
-Copyright 2016 DeveloperDemetri
+Copyright 2016-2017 DeveloperDemetri
 developerdemetri.com
 
 Licensed under the Apache License, Version 2.0 (the "License");
